--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-translate-api": "^2.3.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
     "redis": "^4.7.0"
   }
