--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "google-translate-api": "^2.3.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
+    "nodemon": "^3.1.9",
     "redis": "^4.7.0"
   }
 }
